--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -1,299 +1,205 @@
 .body {
   width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template: "  head head head head" 80px " left main archive right" 1fr/60px 1fr 200px 60px;
+  min-height: 100vh;
+  padding-top: 130px;
+  padding-top: 230px;
+  background-image: url("/image/blog-link.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.body .header {
-  grid-area: head;
+.body::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  content: "";
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.body .pageTitle {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  top: 130px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(187, 187, 187);
 }
-.body .left {
-  border: 1px dashed black;
-  grid-area: left;
+.body .pageTitle::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  content: "";
+  background-color: rgba(0, 0, 0, 0.4);
 }
-.body .right {
-  border: 1px dashed black;
-  grid-area: right;
-}
-.body .main {
-  grid-area: main;
+.body .pageTitle .title {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
-  padding: 2rem;
-}
-.body .main .mainTitle {
-  display: flex;
-}
-.body .main .mainTitle > h1 {
-  font-size: 25px;
-  margin: 0 0 2rem;
-}
-.body .main .newsBox {
-  border: 3px solid black;
-  display: grid;
   width: 100%;
-  margin-bottom: 2rem;
-  grid-template: "article image" 300px/65% 35%;
+  height: 100px;
+  z-index: 10;
 }
-.body .main .newsBox .news {
-  grid-area: article;
-  padding: 1.5rem;
+.body .pageTitle .title h1,
+.body .pageTitle .title h4 {
+  color: white;
+  margin: 0;
+}
+.body .pageTitle .title h1 {
+  font-size: 2rem;
+}
+.body main {
+  width: 100%;
+  height: calc(100vh - 330px);
   overflow: scroll;
 }
-.body .main .newsBox .news .time {
-  color: red;
-}
-.body .main .newsBox .news .sentence {
-  font-size: 15px;
-  line-height: 1.8;
-}
-.body .main .newsBox .imageBox {
-  grid-area: image;
+.body main article {
+  width: calc(100% - 300px);
+  min-height: calc(100vh - 380px);
+  padding: 1rem 2rem 2rem;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.body .main .newsBox .imageBox .image {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.body .main .button {
+.body main article .articleItem {
+  background-color: white;
   width: 100%;
-  height: 80px;
+  height: 250px;
+  border-radius: 10px;
+  margin-bottom: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.body .main .button a {
-  padding: 1rem 2rem;
-  margin: 0 1rem;
-  border: 1px solid black;
-}
-.body .main .button a:hover {
-  color: white;
-  background-color: gray;
-}
-.body .archive {
-  grid-area: archive;
-  padding-top: 2rem;
-}
-.body .archive .archiveTitle > h1 {
-  font-size: 25px;
-  text-align: center;
-  margin: 0 0 2rem;
-}
-.body .archive .ul {
-  display: flex;
-  flex-direction: column;
-  height: 300px;
-  width: 100%;
-  padding: 1rem;
+.body main article .articleItem h1 {
   margin: 0;
+}
+.body main article .article {
+  background-color: white;
+  width: 95%;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  border-radius: 10px;
+  display: grid;
+  grid-template: "sentence image" 250px/1fr 350px;
+}
+.body main article .article .sentenceBox {
+  grid-area: sentence;
+  padding: 1rem;
+  overflow: scroll;
+}
+.body main article .article .sentenceBox h1 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+.body main article .article .sentenceBox .ArticleTitle,
+.body main article .article .sentenceBox .publishedAt {
+  margin-bottom: 1rem;
+}
+.body main article .article .sentenceBox .sentence p {
+  margin: 0;
+}
+.body main article .article .imageBox {
+  grid-area: image;
+  position: relative;
+}
+.body main footer {
+  background-color: silver;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body main footer p {
+  margin: 0;
+}
+.body section {
+  width: 100%;
+  min-height: calc(100vh - 230px);
+  position: relative;
+  z-index: 10;
+}
+.body section .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100px;
+  width: calc(100% - 300px);
+}
+.body section .title h1,
+.body section .title h4 {
+  color: white;
+  margin: 0;
+}
+.body section .title h1 {
+  font-size: 2rem;
+}
+.body section nav {
+  width: 300px;
+  height: calc(100vh - 280px);
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+.body section nav .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100px;
+}
+.body section nav .title h1,
+.body section nav .title h4 {
+  color: white;
+  margin: 0;
+}
+.body section nav .title h1 {
+  font-size: 2rem;
+}
+.body section nav ul {
+  width: 100%;
+  height: calc(100vh - 420px);
+  margin: 0;
+  padding: 1rem 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
   list-style: none;
   overflow: scroll;
 }
-.body .archive .ul .li {
+.body section nav ul li {
+  width: 200px;
+  margin-bottom: 1rem;
   display: flex;
-  text-align: center;
-  margin-bottom: 1.5rem;
+  justify-content: center;
+  align-items: center;
 }
-.body .archive .ul .li .a {
+.body section nav ul li a {
+  border-bottom: 1px solid white;
+  color: white;
   width: 100%;
-  font-size: 15px;
-  padding: 0.5rem;
-  border-bottom: 3px solid black;
-  display: inline-block;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@media screen and (max-width: 1100px) {
-  .body {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template: "head" 80px "archive" 250px "main" 1fr/1fr;
-  }
-  .body .right,
-.body .left {
-    display: none;
-  }
-  .body .main {
-    padding: 1rem 2rem;
-    align-items: center;
-  }
-  .body .main .mainTitle {
-    width: 90%;
-    display: flex;
-  }
-  .body .main .mainTitle > h1 {
-    font-size: 20px;
-    margin: 0 0 1rem;
-  }
-  .body .main .newsBox {
-    width: 90%;
-  }
-  .body .archive {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 1rem 2rem;
-  }
-  .body .archive .archiveTitle {
-    width: 90%;
-    display: flex;
-  }
-  .body .archive .archiveTitle > h1 {
-    font-size: 20px;
-    text-align: start;
-    margin: 0 0 1rem;
-  }
-  .body .archive .ul {
-    border: 3px solid black;
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    height: 100px;
-    padding: 0rem;
-    padding: 0.5rem;
-    overflow: scroll;
-    flex-wrap: wrap;
-  }
-  .body .archive .ul .li {
-    margin: 0.5rem;
-    width: calc(25% - 1rem);
-  }
-  .body .archive .ul .li .a {
-    border: none;
-    border-bottom: 3px solid black;
-    padding: 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
+.body section nav ul li a:hover {
+  color: black;
+  background-color: white;
+  transition: 300ms;
+  border-radius: 10px;
 }
-@media screen and (max-width: 950px) {
-  .body .archive .ul .li .a {
-    font-size: 13px;
-  }
-}
-@media screen and (max-width: 850px) {
-  .body .archive .ul .li {
-    width: calc(50% - 1rem);
-  }
-  .body .archive .ul .li .a {
-    font-size: 15px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .body .main {
-    align-items: center;
-  }
-  .body .main .newsBox {
-    border: 3px solid black;
-    display: grid;
-    width: 90%;
-    margin-bottom: 2rem;
-    grid-template: "article" 250px "image" 250px/1fr;
-  }
-  .body .main .newsBox .news .sentence {
-    font-size: 14px;
-  }
-  .body .main .newsBox .imageBox .image {
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .body .archive .ul {
-    width: 90%;
-    padding: 0.5rem;
-  }
-  .body .archive .ul .li {
-    width: calc(50% - 1rem);
-  }
-  .body .archive .ul .li .a {
-    font-size: 15px;
-  }
-}
-@media screen and (max-width: 600px) {
-  .body .main .newsBox .news h1 {
-    font-size: 20px;
-  }
-  .body .main .newsBox .news .sentence {
-    font-size: 14px;
-  }
-  .body .archive .ul {
-    width: 90%;
-    padding: 0.5rem;
-  }
-  .body .archive .ul .li {
-    width: calc(100% - 1rem);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .body .archive .ul .li .a {
-    font-size: 15px;
-    width: 60%;
-  }
-}
-@media screen and (max-width: 480px) {
-  .body {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template: "head " 80px "archive " 200px " main " 1fr/1fr;
-  }
-  .body .right,
-.body .left {
-    display: none;
-  }
-  .body .main {
-    padding: 1rem 2rem;
-  }
-  .body .main .mainTitle {
-    width: 100%;
-  }
-  .body .main .mainTitle > h1 {
-    font-size: 20px;
-    margin: 0 0 1rem;
-  }
-  .body .main .newsBox {
-    width: 100%;
-  }
-  .body .main .newsBox .news {
-    padding: 0.5rem;
-  }
-  .body .main .newsBox .imageBox {
-    padding: 0;
-  }
-  .body .archive {
-    padding: 1rem 2rem;
-  }
-  .body .archive .archiveTitle {
-    width: 100%;
-  }
-  .body .archive .archiveTitle > h1 {
-    font-size: 20px;
-    margin: 0 0 1rem;
-  }
-  .body .archive .ul {
-    width: 100%;
-  }
-  .body .archive .ul .li {
-    width: 100%;
-    font-size: 15px;
-  }
-  .body .archive .ul .li .a {
-    width: 60%;
-    font-size: 14px;
-  }
-  .body .archive .ul .li .a .borderButtom {
-    border: 1px solid black;
-    width: 60%;
-  }
-}
-/*# sourceMappingURL=news.module.css.map */
+/*# sourceMappingURL=blog.module.css.map */
