--- a/components/BlogNav/BlogNav.module.css
+++ b/components/BlogNav/BlogNav.module.css
@@ -1,2 +1,57 @@
+.body {
+  width: 100%;
+  height: 100px;
+  position: relative;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+}
+.body .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 10;
+}
+.body .title h4 {
+  margin: 0;
+  color: white;
+}
+.body .title h1 {
+  font-size: 2rem;
+  margin: 0;
+  color: white;
+}
 
+@media screen and (max-width: 768px) {
+  .body .title h4 {
+    font-size: 0.8rem;
+  }
+  .body .title h1 {
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .body {
+    height: 80px;
+    top: -30px;
+  }
+  .body .title h4 {
+    font-size: 0.7em;
+  }
+  .body .title h1 {
+    font-size: 1.5rem;
+  }
+}
 /*# sourceMappingURL=BlogNav.module.css.map */
