--- a/components/Header/hederAnother.module.scss
+++ b/components/Header/hederAnother.module.scss
@@ -1,6 +1,7 @@
 .body {
   // background-color: blue;
   background-color: black;
+  // opacity: 0.7;
   width: 100%;
   height: 130px;
   position: fixed;
