--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -1,9 +1,11 @@
 .body {
+  position: fixed;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   padding-top: 130px;
-  padding-top: 230px;
+  border-top: none;
   background-image: url("/image/blog-link.jpg");
+  background-image: url("/image/all-menu/cocktail.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -18,16 +20,17 @@
   content: "";
   background-color: rgba(0, 0, 0, 0.4);
 }
-.body .pageTitle {
+.body header {
   width: 100%;
   height: 100px;
-  position: absolute;
-  top: 130px;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 10;
 }
-.body .pageTitle::after {
+.body header::after {
   position: absolute;
   left: 0;
   right: 0;
@@ -35,171 +38,473 @@
   bottom: 0;
   height: 100%;
   content: "";
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
 }
-.body .pageTitle .title {
+.body header .pageTitle {
+  z-index: 10;
+}
+.body header .pageTitle h1 {
+  margin: 0;
+  color: white;
+}
+.body main {
+  position: relative;
+  z-index: 20;
+  width: 100%;
+  height: calc(100vh - 230px);
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  box-sizing: border-box;
+}
+.body main .mainSection {
   width: 100%;
+  height: calc(100vh - 230px);
+  position: fixed;
+}
+.body main .mainSection .sectionTitle {
+  width: calc(100% - 300px);
   height: 100px;
-  z-index: 10;
-}
-.body .pageTitle .title h1,
-.body .pageTitle .title h4 {
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+.body main .mainSection .sectionTitle .title h1 {
   margin: 0;
+  font-size: 1.8rem;
 }
-.body .pageTitle .title h1 {
-  font-size: 2rem;
-}
-.body main {
+.body main .mainSection .articleSection {
   width: 100%;
   height: calc(100vh - 330px);
   overflow: scroll;
 }
-.body main article {
+.body main .mainSection .articleSection .articleBox {
   width: calc(100% - 300px);
   min-height: calc(100vh - 380px);
-  padding: 1rem 2rem 2rem;
+  padding: 0 2rem 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+  justify-content: flex-start;
   flex-direction: column;
 }
-.body main article .articleItem {
+.body main .mainSection .articleSection .articleBox h1 {
+  margin: 0;
+}
+.body main .mainSection .articleSection .articleBox .articleItem {
   background-color: white;
-  width: 100%;
-  height: 250px;
-  border-radius: 10px;
+  width: 90%;
+  min-height: 200px;
+  padding: 1.5rem;
   margin-bottom: 2rem;
+  border-radius: 10px;
+  box-sizing: content-box;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 }
-.body main article .articleItem h1 {
-  margin: 0;
-}
-.body main article .article {
-  background-color: white;
-  width: 95%;
-  padding: 1rem;
-  margin-bottom: 2rem;
-  border-radius: 10px;
-  display: grid;
-  grid-template: "sentence image" 250px/1fr 350px;
-}
-.body main article .article .sentenceBox {
-  grid-area: sentence;
-  padding: 1rem;
+.body main .mainSection .articleSection .articleBox .articleItem .sentenceBox {
+  width: calc(100% - 350px);
+  height: 200px;
   overflow: scroll;
+  padding-right: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
 }
-.body main article .article .sentenceBox h1 {
+.body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .articleTitle {
   margin: 0;
+  margin-bottom: 1rem;
   font-size: 1.5rem;
 }
-.body main article .article .sentenceBox .ArticleTitle,
-.body main article .article .sentenceBox .publishedAt {
+.body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .publishedAt {
   margin-bottom: 1rem;
 }
-.body main article .article .sentenceBox .sentence p {
+.body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .sentence p {
   margin: 0;
+  line-height: 1.8;
 }
-.body main article .article .imageBox {
-  grid-area: image;
+.body main .mainSection .articleSection .articleBox .articleItem .imageBox {
+  width: 350px;
+  height: 200px;
+}
+.body main .mainSection .articleSection .articleBox .articleItem .imageBox .image {
+  width: 100%;
+  height: 100%;
   position: relative;
 }
-.body main footer {
-  background-color: silver;
+.body main .mainSection .articleSection footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  background-color: gray;
+  background-color: pink;
+  opacity: 0.7;
+  color: white;
   width: 100%;
   height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
-.body main footer p {
-  margin: 0;
-}
-.body section {
-  width: 100%;
-  min-height: calc(100vh - 230px);
-  position: relative;
-  z-index: 10;
-}
-.body section .title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100px;
-  width: calc(100% - 300px);
-}
-.body section .title h1,
-.body section .title h4 {
-  color: white;
-  margin: 0;
-}
-.body section .title h1 {
-  font-size: 2rem;
-}
-.body section nav {
+.body .navSection {
+  z-index: 20;
   width: 300px;
   height: calc(100vh - 280px);
-  position: absolute;
-  top: 0px;
-  right: 0px;
-}
-.body section nav .title {
+  position: fixed;
+  top: 230px;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100px;
-}
-.body section nav .title h1,
-.body section nav .title h4 {
-  color: white;
-  margin: 0;
-}
-.body section nav .title h1 {
-  font-size: 2rem;
-}
-.body section nav ul {
-  width: 100%;
-  height: calc(100vh - 420px);
-  margin: 0;
-  padding: 1rem 0 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  box-sizing: border-box;
   flex-direction: column;
   justify-content: flex-start;
-  list-style: none;
-  overflow: scroll;
 }
-.body section nav ul li {
-  width: 200px;
-  margin-bottom: 1rem;
+.body .navSection .navSectionTitle {
+  color: white;
+  width: 100%;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 }
-.body section nav ul li a {
-  border-bottom: 1px solid white;
-  color: white;
+.body .navSection .navSectionTitle .title h1 {
+  margin: 0;
+  font-size: 1.8em;
+}
+.body .navSection ul {
   width: 100%;
+  height: calc(100vh - 444px);
+  padding: 0;
+  margin: 2rem 0;
+  margin: 0;
+  list-style: none;
+  overflow: scroll;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+.body .navSection ul li {
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+.body .navSection ul li a {
+  background-color: darkorange;
+  color: white;
+  width: 200px;
   padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.body section nav ul li a:hover {
-  color: black;
-  background-color: white;
-  transition: 300ms;
+  box-sizing: border-box;
   border-radius: 10px;
+  font-weight: bold;
+}
+.body .navSection ul li a:hover {
+  background-color: orange;
+  border-radius: 10px;
+  transition: 300ms;
+}
+
+@media screen and (max-width: 1240px) {
+  .body main .mainSection .sectionTitle {
+    width: calc(100% - 250px);
+  }
+  .body main .mainSection .articleSection {
+    width: 100%;
+    height: calc(100vh - 330px);
+  }
+  .body main .mainSection .articleSection .articleBox {
+    width: calc(100% - 250px);
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem {
+    width: 100%;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox {
+    width: calc(100% - 320px);
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .articleTitle {
+    font-size: 1.4rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .publishedAt {
+    font-size: 0.9rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .sentence p {
+    font-size: 0.9rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .imageBox {
+    width: 320px;
+  }
+  .body .navSection {
+    width: 250px;
+  }
+  .body .navSection ul li a {
+    width: 180px;
+    padding: 0.8rem;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .body header {
+    height: 50px;
+  }
+  .body main {
+    height: calc(100vh - 350px);
+    margin-top: 120px;
+    align-items: flex-start;
+  }
+  .body main .mainSection {
+    width: 100%;
+    height: calc(100vh - 350px);
+    padding: 1rem 0 0;
+  }
+  .body main .mainSection .sectionTitle {
+    width: 100%;
+    height: 30px;
+    padding: 0 2rem;
+    margin: 0 0 2.5rem;
+    justify-content: flex-start;
+  }
+  .body main .mainSection .sectionTitle .title h1 {
+    width: 130px;
+    margin: 0;
+    font-size: 1.5rem;
+  }
+  .body main .mainSection .articleSection {
+    height: calc(100vh - 436px);
+  }
+  .body main .mainSection .articleSection .articleBox {
+    width: 100%;
+    min-height: calc(100vh - 486px);
+    padding: 0 2rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem {
+    width: 100%;
+    min-height: 200px;
+    padding: 1.5rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox {
+    width: calc(100% - 300px);
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .imageBox {
+    width: 300px;
+  }
+  .body .navSection {
+    width: 100%;
+    height: 120px;
+    top: 230px;
+    left: 0;
+    padding: 1rem 2rem;
+    flex-direction: row;
+  }
+  .body .navSection .navSectionTitle {
+    width: 130px;
+    height: 30px;
+    margin: 0;
+    justify-content: flex-start;
+  }
+  .body .navSection .navSectionTitle .title h1 {
+    margin: 0;
+    font-size: 1.5em;
+  }
+  .body .navSection ul {
+    width: calc(100% - 130px);
+    height: 50px;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .body .navSection ul li {
+    margin-bottom: 0;
+    flex-direction: column;
+    width: calc(33% - 1rem);
+    padding: 0 0.5rem 1rem;
+  }
+  .body .navSection ul li a {
+    width: 100%;
+    height: 50px;
+    font-size: 0.85rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .body main .mainSection .articleSection .articleBox .articleItem {
+    min-height: 180px;
+    padding: 1.5rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox {
+    width: calc(100% - 250px);
+    height: 180px;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .articleTitle {
+    font-size: 1.2rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .publishedAt {
+    font-size: 0.85rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .sentence p {
+    font-size: 0.8rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .imageBox {
+    width: 250px;
+    height: 180px;
+  }
+  .body .navSection ul li {
+    width: calc(50% - 1rem);
+  }
+}
+@media screen and (max-width: 650px) {
+  .body main .mainSection .articleSection .articleBox {
+    align-items: flex-start;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem {
+    min-height: auto;
+    width: 100%;
+    padding: 1rem;
+    padding: 1.5rem;
+    flex-direction: column;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox {
+    width: 100%;
+    height: auto;
+    min-height: 120px;
+    max-height: 220px;
+    padding-right: 0;
+    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .articleTitle {
+    font-size: 1.2rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .publishedAt {
+    font-size: 0.85rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .sentence p {
+    font-size: 0.8rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .imageBox {
+    width: 100%;
+    height: 220px;
+  }
+}
+@media screen and (max-width: 570px) {
+  .body .navSection ul li {
+    width: calc(100% - 1rem);
+  }
+  .body .navSection ul li a {
+    width: 80%;
+    font-size: 0.85rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .body main {
+    margin-top: 50px;
+    height: calc(100vh - 260px);
+  }
+  .body main .mainSection {
+    height: calc(100vh - 260px);
+  }
+  .body main .mainSection .sectionTitle {
+    padding: 0 1.5rem;
+  }
+  .body main .mainSection .sectionTitle .title h1 {
+    width: 130px;
+    width: 110px;
+    font-size: 1.3rem;
+  }
+  .body main .mainSection .articleSection {
+    height: calc(100vh - 346px);
+  }
+  .body main .mainSection .articleSection .articleBox {
+    min-height: calc(100vh - 396px);
+    padding: 0 1.5rem;
+    align-items: center;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem {
+    width: 100%;
+    padding: 1rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .articleTitle {
+    font-size: 1.1rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .publishedAt {
+    font-size: 0.8rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .sentence p {
+    font-size: 0.75rem;
+  }
+  .body .navSection {
+    top: 180px;
+    height: 80px;
+    padding: 0 1.5rem;
+  }
+  .body .navSection .navSectionTitle {
+    width: 130px;
+    width: 110px;
+  }
+  .body .navSection .navSectionTitle .title h1 {
+    font-size: 1.3em;
+  }
+  .body .navSection ul {
+    height: 40px;
+    width: calc(100% - 130px);
+    width: calc(100% - 110px);
+  }
+  .body .navSection ul li a {
+    width: 100%;
+    height: 40px;
+  }
+}
+@media screen and (max-width: 390px) {
+  .body main .mainSection .sectionTitle .title h1 {
+    width: 105px;
+    font-size: 1.15rem;
+  }
+  .body main .mainSection .articleSection {
+    height: calc(100vh - 346px);
+  }
+  .body main .mainSection .articleSection .articleBox {
+    padding: 0 1.5rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem {
+    width: 100%;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .articleTitle {
+    font-size: 1rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .publishedAt {
+    font-size: 0.75rem;
+  }
+  .body main .mainSection .articleSection .articleBox .articleItem .sentenceBox .sentence p {
+    font-size: 0.7rem;
+  }
+  .body .navSection .navSectionTitle {
+    width: 105px;
+  }
+  .body .navSection .navSectionTitle .title h1 {
+    font-size: 1.15em;
+  }
+  .body .navSection ul {
+    width: calc(100% - 105px);
+  }
+  .body .navSection ul li a {
+    font-size: 0.7rem;
+  }
 }
 /*# sourceMappingURL=blog.module.css.map */
